# lw-version

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: cli.rs  git.rs  main.rs  package_json.rs  utils.rs
src/manifests/: cargo.rs  mod.rs  node.rs
